# astromake

./: INSTALL  Makefile  README.md  TODO  astromake_end  astromake_start.csh.in  astromake_start.in  astromake_start.sh.in  configure  configure.in
make/: Makefile  README.pjt  astroload  astroload.sh  astroloaded  astromake  astromake.install  astromake_patch  version  wwwget
make/files/: aastex  aips++  astromake  casa  ciao  dart  ds9  ds9-pjt  funtools  gildas  gildas-pjt  gipsy  hdf  karma  karma-pjt  miriad  nemo  pgplot  saoimage  saoimage-pjt  saord  sm  xephem  xephem-pjt  xgobi
rc/: All.csh  All.sh  R.csh  admit.csh  aips++.csh  aips++.sh  carma_tools.csh  carta.csh  casa.csh  casa.sh  ciao.csh  cloudy.csh  cloudy.sh  dart.csh  drpacs.csh  ds9.csh  ds9.sh  duchamp.csh  duchamp.sh  dx.csh  firefox.csh  fl.csh  ftools.csh  funtools.csh  gadget.csh  gadget.sh  gcc.csh  gildas.csh  gildas.sh  gipsy.csh  git.csh  git.sh  globus.csh  globus.sh  grace.csh  hat.csh  hat.rc  intel.csh  java.csh  julia.sh  (+47 more)
