dnl Process this file with autoconf to produce a new configure script
dnl if it has changed. See also the Makefile in $NEMO  how to automate
dnl this.
dnl ---------------------------------------------------------------------------------

AC_MSG_CHECKING([ASTROMAKE config])

AC_INIT(make/astromake)

dnl ---			ASTROMAKE base directory
ASTROMAKE="`pwd`"
AC_SUBST(ASTROMAKE)

AC_OUTPUT(astromake_start)

echo "
-------------------------------------------------------------------------
All done, bla bla bla


-------------------------------------------------------------------------
"


