dnl Process this file with autoconf to produce a new configure script
dnl if it has changed. See also the Makefile in $NEMO  how to automate
dnl this.
dnl ---------------------------------------------------------------------------------

AC_MSG_CHECKING([ASTROMAKE config])

AC_INIT(make/astromake)

dnl ---			ASTROMAKE base directory
ASTROMAKE="`pwd`"
AC_SUBST(ASTROMAKE)

AC_OUTPUT(astromake_start.csh)
AC_OUTPUT(astromake_start.sh)

dnl -- maintain some compatibility with the 1.1 and earlier release
ln -sf astromake_start.csh astromake_start

echo "
-------------------------------------------------------------------------
Just proceed with
      make install
and when this is done activate astromake in your shell by adding the
command
      source $ASTROMAKE/astromake_start.csh
to your csh startup file. Or the .sh variant if you use a sh type shell.
-------------------------------------------------------------------------
"


